--- a/app/src/main/res/layout/custom_view_layout.xml
+++ b/app/src/main/res/layout/custom_view_layout.xml
@@ -6,11 +6,22 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/genreTitle"
+        android:id="@+id/genreTitleTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textSize="16sp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/moviesListRV"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/genreTitleTV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
