--- a/app/src/main/res/layout/custom_view_layout.xml
+++ b/app/src/main/res/layout/custom_view_layout.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/genreTitleTV"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/genre_text_margin"
+        android:layout_marginTop="@dimen/genre_text_margin_top"
+        android:layout_marginEnd="@dimen/genre_text_margin"
         android:textColor="@android:color/black"
         android:textSize="@dimen/genre_text_size"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/moviesListRV"
         android:layout_width="0dp"
-        android:layout_height="@dimen/movie_poster_size"
-        android:layout_marginTop="@dimen/movie_margin_top"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
