--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/movieImage"
+    <androidx.cardview.widget.CardView
         android:layout_width="@dimen/movie_poster_size"
         android:layout_height="@dimen/movie_poster_size"
-        android:contentDescription="@string/movie_content_description"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="@dimen/image_margin"
+        app:cardCornerRadius="@dimen/image_corner_radius"
+        app:cardElevation="0dp">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/movieImage"
+            android:layout_width="@dimen/movie_poster_size"
+            android:layout_height="@dimen/movie_poster_size"
+            android:contentDescription="@string/movie_content_description"
+            android:scaleType="centerCrop" />
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/movieTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:gravity="center|top"
+        android:lines="2"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/movie_title_size" />
+</LinearLayout>
