--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="genre_text_size">16sp</dimen>
+    <dimen name="genre_text_size">20sp</dimen>
     <dimen name="movie_poster_size">150dp</dimen>
     <dimen name="movie_margin_top">16dp</dimen>
+    <dimen name="image_corner_radius">16dp</dimen>
+    <dimen name="genre_item_height">160dp</dimen>
+    <dimen name="image_margin">10dp</dimen>
+    <dimen name="movie_title_size">12sp</dimen>
+    <dimen name="genre_text_margin">16dp</dimen>
+    <dimen name="genre_text_margin_top">8dp</dimen>
 </resources>
